hphp/test/slow/array/ban_typehint0.php.expectf
Fatal error: Array typehints are no longer legal; use varray or darray instead in %s/ban_typehint0.php on line 4
